Fix #86 - add a lastUpdate property on consentOffer
